# wlrune

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: build.yml
src/: config.rs  main.rs  recognizer.rs  wayland.rs
